--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -205,7 +205,7 @@
 .cover {
     color: rgb(241, 241, 241);
     height: 100%;
-    background: url('https://raw.githubusercontent.com/ChitandaE/blog/master/01f471c452b014804db6d729c1812dae16d7bacf.jpg') no-repeat center center fixed;
+    background: url('https://raw.githubusercontent.com/ChitandaE/blog/master/1%20(2).png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
