--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,15 +14,15 @@
   <script>(function(T,h,i,n,k,P,a,g,e){g=function(){P=h.createElement(i);a=h.getElementsByTagName(i)[0];P.src=k;P.charset="utf-8";P.async=1;a.parentNode.insertBefore(P,a)};T["ThinkPageWeatherWidgetObject"]=n;T[n]||(T[n]=function(){(T[n].q=T[n].q||[]).push(arguments)});T[n].l=+new Date();if(T.attachEvent){T.attachEvent("onload",g)}else{T.addEventListener("load",g,false)}}(window,document,"script","tpwidget","//widget.seniverse.com/widget/chameleon.js"))</script>
 <script>tpwidget("init", {
     "flavor": "bubble",
-    "location": "WX4FBXXFKE4F",
-    "geolocation": "disabled",
-    "position": "top-left",
+    "location": "WW7PBM8PNJUD",
+    "geolocation": "enabled",
+    "position": "bottom-left",
     "margin": "10px 10px",
-    "language": "zh-chs",
+    "language": "auto",
     "unit": "c",
     "theme": "chameleon",
     "uid": "U408843823",
-    "hash": "68fb4233fa05929d16b66b7ba7cbf109"
+    "hash": "4909521221a67dc1f627195712cfda53"
 });
 tpwidget("show");</script>
   
