--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -142,7 +142,7 @@ pre {
 }
 
 code {
-    text-align: center；
+    text-align: center;
     background: #fafafd;
     padding: 0.063em;
     border: 0.063em solid #dedede;
