--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,7 +16,6 @@ html, body{
  * Basic styling
  */
 body {
-    text-align: center;
     font-family: $base-font-family;
     font-size: $base-font-size;
     line-height: $base-line-height;
@@ -142,7 +141,7 @@ pre {
 }
 
 code {
-    text-align: center;
+    align: center;
     background: #fafafd;
     padding: 0.063em;
     border: 0.063em solid #dedede;
