--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -205,7 +205,7 @@
 .cover {
     color: rgb(241, 241, 241);
     height: 100%;
-    background: url('/123.png') no-repeat center center fixed;
+    background: url('https://raw.githubusercontent.com/ChitandaE/blogs/master/123.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
